force-app/bypass/default/objects/zak_BypassMapping__mdt/zak_BypassMapping__mdt.object-meta.xml
<CustomObject>
    <description>Maps bypasses to custom permissions or custom settings.</description>
    <label>Bypass Mapping</label>
    <pluralLabel>Bypass Mappings</pluralLabel>
</CustomObject>