force-app/bypass/default/objects/zak_BypassMapping__mdt/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <description>Developer name of custom permission or technical field name on custom setting Bypass__c.</description>
    <label>Entity</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>