force-app/bypass/default/objects/zak_BypassMapping__mdt/fields/EntityType__c.field-meta.xml
<CustomField>
    <fullName>EntityType__c</fullName>
    <description>Where should bypass be retrieved from.</description>
    <label>Entity Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SETTINGS</fullName>
                <default>true</default>
                <label>Custom setting</label>
            </value>
            <value>
                <fullName>PERMISSIONS</fullName>
                <label>Custom permission</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>