force-app/bypass/default/objects/zak_BypassMapping__mdt/fields/Path__c.field-meta.xml
<CustomField>
    <fullName>Path__c</fullName>
    <description>Path is dot (.) separated hierarchical notation of bypass. Like, account.sales.insert.after.validatecountry.</description>
    <label>Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>