force-app/bypass/default/objects/zak_BypassMapping__mdt/listViews/Bypasses.listView-meta.xml
<ListView>
    <fullName>Bypasses</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Path__c</columns>
    <columns>EntityType__c</columns>
    <columns>Entity__c</columns>
    <filterScope>Everything</filterScope>
    <label>Bypasses</label>
    <language>en_US</language>
</ListView>